[package]
name = "async-fuse"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.41"
crossbeam-utils = "0.8.0"
futures-io = "0.3.7"
futures-util = { version = "0.3.7", features = ["io"] }
libc = "0.2.80"
memchr = "2.3.4"
smallvec = "1.4.2"
thiserror = "1.0.21"

[dependencies.tracing]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.2.0"
## FIXME: unpublished version

[dependencies.tracing-error]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.2.0"
## FIXME: unpublished version

[dependencies.tracing-futures]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.3.0"
## FIXME: unpublished version

[dev-dependencies]
aligned-bytes = "0.1.5"
