[package]
name = "memfs"
version = "0.1.0"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-fuse]
path = "../async-fuse"

[dependencies]
aligned-bytes = "0.1.5"
anyhow = "1.0.34"
async-std = "1.7.0"
async-trait = "0.1.41"
blocking = "1.0.2"
crossbeam-queue = "0.3.0"
futures = "0.3.8"
libc = "0.2.80"
memchr = "2.3.4"
structopt = "0.3.20"


[dependencies.tracing]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.2.0"
## FIXME: unpublished version

[dependencies.tracing-error]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.2.0"
## FIXME: unpublished version

[dependencies.tracing-futures]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.3.0"
## FIXME: unpublished version

[dependencies.tracing-subscriber]
git = "https://github.com/tokio-rs/tracing"
rev = "8070a85"
version = "0.3.0"
## FIXME: unpublished version
